    * Filtering: added year suffix for date filters in the collection browser.
    * Last.fm features that require user authentication are now disabled
      by default.
    * Ignore "DJ" prefix when sorting in collection browser. (BR 181955)
      Patch by Richard Longland <rlongland@hotmail.com>.

  BUGFIXES:
    * Fixed resizing and eliding issues with the file browser breadcrumbs.
      (BR 231366 comment #5)
    * Drop file icons in file browser breadcrumbs. (BR 231366)
    * Fixed keyboard navigation in file browser. (BR 240668)
      Patch thanks to Hannes Koller.
    * Fixed dropping files to playlist from Konqueror. (BR 235722)
    * Fixed keyboard shortcuts of actions from scripts lost after restart.
      Thanks to Martin Blumenstingl <darklight.xdarklight@googlemail.com>.
      (BR 223165)
    * Fixed tracks not changing for "stop after this track" action. (BR 231209)
    * Cleaned up some tooltips/what's this strings in the Organize dialog
      to make it easier to read and, hopefully, understand. (BR 237857)
    * Fixed organize dialog's handling of the year tag. If there is no year
      then the %year token should be an empty string.(BR 237834)
    * The "Ignore 'The'" option in the organize files dialog is now case
      insensitive. (BR 237831)
    * Fixed odd header name when showing "places" in the file browser.
      (BR 238518)
    * Filenames with dots (.) and other special RegEx characters will now be
      parsed correctly when guessing tags from a filename. (BR 225743)
    * Align track details dialog's labels to the right as per KDE4's HIG.
      (BR 234555)
    * The last.fm service will now only open the wallet on startup if the user
      has enabled features that require authentication. (BR 230098)
    * Correctly load the list of labels in tag dialog. (BR 238737)
      Patch by Daniel Faust <hessijames@gmail.com>.
    * Cover manager: fixed crash if closed shortly after opening. (BR 235796)